tests/functions/valid/forward_decl.su
s32 foo();

s32 main() {
    return foo();
}

s32 foo() {
    return 3;
}