tests/functions/invalid/redefine_function.su
s32 foo(){
    return 3;
}

s32 main() {
    return foo();
}

s32 foo(){
    return 4;
}